# mise-en-space

./: .gitignore  .mcp.json  .mcpbignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  auth.py  cli.py  credentials.json  cues_util.py  filters.py  html_convert.py  instructions.md  launch.sh  logging_config.py  manifest.json  markdown_import.py  mcp-local.json  mise-plain-file-update-spec.md  models.py  oauth_config.py  pyproject.toml  retry.py  server.py  token_store.py  validation.py
.arc/: items.jsonl
.beads/: issues.jsonl
.bon/: items.jsonl  items.jsonl.backup  quickfile-2026-05-04-cowork-polish.md  understanding.md
.bon/contributions/: 2026-03-15T135700.md  2026-03-15T173900.md  2026-03-15T182500.md  2026-03-18T173000.md  2026-03-19T084900.md  2026-03-20T183000.md  2026-03-22T212500.md
.bon/handoffs/: 2026-04-05-f40e389d.md  2026-04-08-0aed85e9.md  2026-04-08-0bc39057.md  2026-04-08-24cb8107.md  2026-04-08-41a7f57f.md  2026-04-08-8b9c085b.md  2026-04-08-a2f2d66c.md  2026-04-09-close.md  2026-04-10-2696ae7d.md  2026-04-15-7584f31c.md  2026-04-15-a2f8ee58.md  2026-04-23-be3500ac.md  2026-04-27-d84f1079.md  2026-05-04-3afa2ae4.md  2026-05-04-eea29160.md  2026-05-18-43587462.md  2026-06-10-875c25f7.md  2026-06-10-ff650a1e.md  2026-06-17-9b2854d8.md  2026-06-28-ab1e945c.md  2026-06-28-fa776fdf.md  2026-07-07-9b5efa30.md  2026-07-07-c72be525.md  2026-07-11-267b6e3a.md  2026-07-11-953498a8.md  2026-07-12-d236ee0c.md  2026-07-13-bb4fb70e.md  2026-07-14-31d98034.md  2026-07-14-f80a61aa.md  2026-07-15-d8b8eebf.md  2026-07-19-4af819a3.md  2026-07-19-7f9eea35.md  2026-07-19-8bce327c.md  2026-07-22-7bf29bce.md  2026-07-23-6adafb34.md  d0a21fbd.md  ec328230.md
.claude/: settings.local.json
.claude-plugin/: plugin.json
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  question.yml
.github/workflows/: ci.yml
adapters/: __init__.py  activity.py  calendar.py  cdp.py  charts.py  conversion.py  docs.py  drive.py  forms.py  genai.py  gmail.py  http_client.py  image.py  office.py  pdf.py  services.py  sheets.py  slides.py  tasks.py  web.py
apps-script/: README.md  deploy.json.example
apps-script/src/: Code.gs  Config.gs  FilterConfig.gs  appsscript.json
bakeoff/: fetch_transcript.sh  test_drive_conversion.py  test_markitdown.py  transcript_curl.sh
config/: attachment_filters.json
docs/: 2026-02-15-xlsx-multi-tab.md  2026-02-18-bon-inline-python-escaping.md  2026-04-10-cowork-plugin-mcp-gap.md  2026-06-28-dependabot-triage.md  2026-07-07-meduto-invite-event-state.md  2026-07-11-wetera-anchored-comment-feasibility.md  2026-07-11-zifoka-comment-anchoring.md  Deep-dive code analysis of Google Workspace MCP implementations.md  bakeoff-video-transcript-discovery.md  decisions.md  information-flow.md  meeting-prep-poc.md  research-meeting-notes-survey.md  sheet-creation-design.md  test-design.md  toise-2026-06-10.md  workspace-mcp-analysis.md  workspace-mcp-eval-brief.md
docs/resources/: search-operators.md  search-syntax.txt
extractors/: __init__.py  comments.py  docs.py  docx_markup.py  folder.py  forms.py  gmail.py  image.py  sheets.py  slides.py  talon_signature.py  video.py  web.py
field-reports/: 2026-02-01-url-fetch-discoverability.md  2026-02-09-blind-test-manifest-skip.md  2026-02-15-xlsx-multi-tab.md  gws-exploration.md
fixtures/: README.md  __init__.py  integration_ids.json  test-roundtrip.md
fixtures/activity/: comment_activities.json  file_activities.json
fixtures/comments/: basic.json  real_comments.json
fixtures/docs/: basic.json  real_multi_tab.json  real_single_tab.json
fixtures/forms/: tp360_2023.json
fixtures/gmail/: catastrophic_strip_briefing.txt  outlook_reply_url_dense_quote.txt  real_rfc822_forward.json  real_thread.json  standalone_msg_with_url_sig.txt  thread.json
fixtures/malformed/: docs_edge_cases.json  gmail_edge_cases.json  sheets_edge_cases.json  slides_edge_cases.json
fixtures/pdf/: flattened_table_rate_card.txt
fixtures/sheets/: basic.json  real_spreadsheet.json
fixtures/slides/: real_presentation.json
hooks/: ensure-mise.sh  session-start.sh
resources/: __init__.py  docs.py  tools.py
scripts/: capture_fixtures.py  cdp_poc.py  chart_timing.py  office_timing.py  pdf_thumb_chrome.py  pdf_thumb_chrome2.py  pdf_thumb_macos.py  pdf_thumbnail_bench.py  sample_descriptions.py  sanitize_fixtures.py  sheet_creation_benchmark.py  slides_timing.py  test_chart_fetch.py  test_overwrite_conversion.py  timing_test.py
skill/: SKILL.md
skill/references/: deposit-structure.md  exploration-loop.md  filtering-results.md
skills/mise/: SKILL.md
skills/workspace/: SKILL.md
tests/: __init__.py  conftest.py  helpers.py  mock_utils.py  test_wheel_closure.py
tests/integration/: README.md  __init__.py  test_activity_adapter.py  test_calendar_adapter.py  test_create_tool.py  test_do_rename_share.py  test_docs_adapter.py  test_drive_adapter.py  test_fetch_tool.py  test_gmail_adapter.py  test_office_adapter.py  test_parallel_search.py  test_pdf_adapter.py  test_search_tool.py  test_sheets_adapter.py  test_slides_adapter.py  test_tasks_adapter.py
tests/unit/: __init__.py  test_activity.py  test_architecture.py  test_auth.py  test_calendar.py  test_call_logging.py  test_cdp.py  test_charts_adapter.py  test_comment.py  test_comment_reply.py  test_comments.py  test_common.py  test_conversion.py  test_create.py  test_cross_source.py  test_cues.py  test_cues_util.py  test_dispatch.py  test_docs.py  test_docs_adapter.py  test_docs_checkbox.py  test_docx_markup.py  test_draft.py  test_drive_adapter.py  test_edit.py  test_fetch.py  test_filters.py  test_folder_adapter.py  test_folder_extractor.py  test_form_create.py  test_form_edit.py  test_genai.py  (+40 more)
tools/: __init__.py  comment.py  comment_reply.py  common.py  create.py  dispatch.py  draft.py  edit.py  fetch.py  form_create.py  form_edit.py  gmail_ops.py  move.py  overwrite.py  plain_file.py  remote.py  rename.py  reply_draft.py  restore_point.py  search.py  setup_oauth.py  share.py  sheet_edit.py  trash.py
workspace/: __init__.py  manager.py
(+21 files in other folders)
