[project]
name = "mise-en-space"
dynamic = ["version"]
description = "Google Workspace MCP — mise-en-place for knowledge work"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # MCP SDK with structured returns and tasks support
    "mcp[cli]>=1.23.0,<2.0.0",
    # Google APIs (httpx + REST, OAuth via jeton)
    "httpx[http2]>=0.27.0",
    "orjson>=3.10.0",
    "jeton",
    # Extraction
    "markitdown[pdf]>=0.1.4",
    "regex>=2025.11.3",
    "websockets>=16.0",
    # PDF page thumbnails (requires poppler-utils system package)
    "pdf2image>=1.17.0",
]

[project.scripts]
mise = "cli:main"

[project.optional-dependencies]
macos = [
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = ".claude-plugin/plugin.json"
pattern = "\"version\":\\s*\"(?P<version>[^\"]+)\""

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["extractors", "adapters", "tools", "workspace"]

[tool.hatch.build.targets.wheel.force-include]
"models.py" = "models.py"
"logging_config.py" = "logging_config.py"
"retry.py" = "retry.py"
"oauth_config.py" = "oauth_config.py"
"auth.py" = "auth.py"
"cli.py" = "cli.py"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: tests that hit real Google APIs"]
addopts = "-m 'not integration' --cov=extractors --cov=adapters --cov=tools --cov=workspace --cov=models --cov=validation --cov=retry --cov-report=term-missing:skip-covered -q"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
# Ignore missing stubs for third-party libs
ignore_missing_imports = true

[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"

[tool.uv.sources]
jeton = { git = "https://github.com/spm1001/jeton.git" }

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "inline-snapshot>=0.15.0",
]
