[project]
name = "mise-en-space"
dynamic = ["version"]
description = "Google Workspace MCP — mise-en-place for knowledge work"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # MCP SDK with structured returns and tasks support
    "mcp[cli]>=1.27.0,<2.0.0",
    # Google APIs (httpx + REST, OAuth via jeton)
    "httpx[http2]>=0.27.0",
    "orjson>=3.10.0",
    "jeton",
    # Form spec parsing
    "pyyaml>=6.0",
    "regex>=2025.11.3",
    "websockets>=16.0",
    # Image extraction (resize/validate, SVG→PNG). Core because it's cheap (~14M)
    # and image fetch should work in every flavour, including the embedded build.
    "pillow>=10.0.0",
    # Markdown→HTML for email draft bodies (GFM tables + bold). Core because
    # draft/reply_draft are remote-safe ops and must render in the slim build —
    # pure-Python, tiny (~250K), no compiled deps. See html_convert.markdown_to_html.
    "markdown>=3.5",
]

[project.scripts]
mise = "cli:main"

[project.optional-dependencies]
# Local fast-path extraction for the full desktop/CLI/Cowork build. The embedded
# (Cornichon) flavour OMITS these: markitdown pulls magika → onnxruntime (~67M),
# which mise doesn't need — it routes by Drive MIME, not byte-sniffing. Without
# them, PDF text falls back to Drive server-side conversion, HTML→markdown to
# tag-stripping, and PDF page thumbnails are skipped. Image fetch stays in core.
# The plugin spawns with `uv run --extra extraction`, so plugin/Cowork stay full;
# Cornichon's vendor.sh installs plain core and gets the slim runtime.
extraction = [
    "markitdown[pdf]>=0.1.4",
    "pdf2image>=1.17.0",
]
macos = [
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    # Stubs for the core `markdown` dep so html_convert.markdown_to_html types
    # cleanly (markdown ships no py.typed).
    "types-Markdown>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = ".claude-plugin/plugin.json"
pattern = "\"version\":\\s*\"(?P<version>[^\"]+)\""

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["extractors", "adapters", "tools", "workspace"]

[tool.hatch.build.targets.wheel.force-include]
"models.py" = "models.py"
"logging_config.py" = "logging_config.py"
"retry.py" = "retry.py"
"oauth_config.py" = "oauth_config.py"
"auth.py" = "auth.py"
"cli.py" = "cli.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: tests that hit real Google APIs"]
addopts = "-m 'not integration' --cov=extractors --cov=adapters --cov=tools --cov=workspace --cov=models --cov=validation --cov=retry --cov-report=term-missing:skip-covered -q"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
# Ignore missing stubs for third-party libs
ignore_missing_imports = true

[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"

[tool.uv.sources]
jeton = { git = "https://github.com/spm1001/jeton.git" }

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "inline-snapshot>=0.15.0",
]
